src/components/constructorFilter/ConstructorFilter.scss
.constructor-filter {

    &__container {
        padding-left: 111px;
        z-index: 1;
        &-flex {
            display: flex;
        }
    }

    &__buttons {
        padding-right: 32px;
        display: flex;
        gap: 20px;
        border-right: 1px solid #5985CB;
    }

    &__select {
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
        
        border-radius: 16px;
        border: 2px solid #3066BE;
        outline: none;
        padding: 15px 88px 15px 32px;
        cursor: pointer;
    }

    &__select-bg {
        margin-right: 32px;
        display: flex;
        justify-content: flex-end;
        padding-left: 32px;
        position: relative;
    }

    &__select-bg::before {
        content: "";
        position: absolute;

        display: block;
        width: 56px;
        height: 100%;
        opacity: 0.8;
        background-color: #3066BE;
        background-image: url('../../assets/icons/select-arrow-icon.png');
        background-repeat: no-repeat;
        background-position: center center;
        border-radius: 0 16px 16px 0;
        pointer-events: none;
    }

    &__instruction {
        position: relative;
        background: none;
        border: none;
        cursor: pointer;
        padding: 0;
      
        svg {
          display: block;
          width: 100%;
          height: 100%;
        }
      
        &-tooltip {
          position: absolute;
          top: 100%; /* Исходное значение для расположения снизу */
          left: 50%;
          transform: translateX(-50%); /* Исходное значение для центрирования по горизонтали */
          background-color: #333;
          color: white;
          padding: 5px;
          border-radius: 3px;
          opacity: 0;
          transition: opacity 0.3s ease-in-out;
        }
      
        &:hover &-tooltip {
          opacity: 1;
        }
    }
    
    &__instruction-modal {
        max-width: 754px;
        max-height: 800px;
        overflow-y: scroll;

        ::-webkit-scrollbar-track {
            background: #000;
        }

        &-title {
            margin: 0;
            margin-bottom: 32px;
            color: #3066BE;
            font-family: Raleway;
            font-size: 36px;
            font-style: normal;
            font-weight: 700;
            line-height: normal;
        }

        &-container:not(:last-child) {
            margin-bottom: 32px;
        }

        &-img {
            margin-bottom: 20px;
        }

        &-text {
            margin: 0;
            color: #000;
            font-family: Raleway;
            font-size: 20px;
            font-style: normal;
            font-weight: 400;
            line-height: normal;
        }

        &-text:not(:last-child) {
            margin-bottom: 20px;
        }
    }
}

